feat: add evaluation arena notebook, central configuration, and Weaviate validation script, removing finetuning test path fixers.

--- a/src/config/config.yaml
+++ b/src/config/config.yaml
@@ -14,7 +14,7 @@ request_timeout: 30  # seconds
 
 # RAG & Vector DB Settings
 vector_db:
-  collection_name: "AdvancedDense"
+  collection_name: "FinancialReport"
   safe_keys:
     - "source"
     - "page_number"
